--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="cursor"></div>
-    <img class="imgs" src="images/img5.jpg" >
-    <img class="imgs" src="images/img2.jpg" >
-    <img class="imgs" src="images/img3.jpg" >
-    <img class="imgs" src="images/img4.jpg" >
+    <img class="imgs" src="img5.jpg" >
+    <img class="imgs" src="img2.jpg" >
+    <img class="imgs" src="img3.jpg" >
+    <img class="imgs" src="img4.jpg" >
     <div id="main">
         <div class="section">
             <nav>
